# CovidTracker

./: CMakeLists.txt  README.md
common/: common.h  record.h  record_display.h
data/: data.c  data.h
main/: main.c
window/admin/: admin_socket.c  admin_socket.h  admin_window.c  admin_window.glade  admin_window.h
window/client/: client_socket.c  client_socket.h  client_window.c  client_window.glade  client_window.h
window/onboarding/: onboarding_window.c  onboarding_window.glade  onboarding_window.h
